--- a/public/user/index.html
+++ b/public/user/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>用户面板 - Unciv Srv</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <main>
@@ -35,7 +35,7 @@
 
       async function loadData() {
         try {
-          const response = await fetch('/api/user/games')
+          const response = await fetch('/api/users/games')
           if (!response.ok) {
             throw new Error('Failed to fetch user data')
           }
