--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -116,7 +116,7 @@
                 <td data-label="创建时间">${new Date(player.createdAt).toLocaleString('zh-CN')}</td>
                 <td data-label="最后更新">${new Date(player.updatedAt).toLocaleString('zh-CN')}</td>
                 <td data-label="备注">${player.remark || ''}</td>
-                <td data-label="操作">
+                <td data-label="操作" class="btn-group">
                   <button class="btn ${player.whitelist ? 'btn-danger' : 'btn-success'}"
                           onclick="togglePlayerWhitelist('${player.playerId}', ${!player.whitelist})">
                     ${player.whitelist ? '移出白名单' : '加入白名单'}
@@ -132,7 +132,7 @@
               )
               .join('')}
           </tbody>
-        </  le>
+        </table>
       `
         document.getElementById('players-table').innerHTML = tableHtml
         checkMobileView()
@@ -172,7 +172,7 @@
                 <td data-label="创建时间">${new Date(game.createdAt).toLocaleString('zh-CN')}</td>
                 <td data-label="最后更新">${new Date(game.updatedAt).toLocaleString('zh-CN')}</td>
                 <td data-label="备注">${game.remark || ''}</td>
-                <td data-label="操作">
+                <td data-label="操作" class="btn-group">
                   <button class="btn ${game.whitelist ? 'btn-danger' : 'btn-success'}"
                           onclick="toggleGameWhitelist('${game.gameId}', ${!game.whitelist})">
                     ${game.whitelist ? '移出白名单' : '加入白名单'}
