--- a/internal/router/web/user/index.html
+++ b/internal/router/web/user/index.html
@@ -143,7 +143,7 @@
         loadData()
       } else {
         const error = await response.json()
-        alert(`删除失败: ${error.error}`)
+        alert(`删除失败: ${error.message}`)
       }
     } catch (error) {
       console.error('Error deleting game:', error)
