--- a/internal/router/web/index.html
+++ b/internal/router/web/index.html
@@ -1,73 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unciv Srv - 登录</title>
-  <link rel="stylesheet" href="/main.css" />
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>登录 - Unciv 多人联机服务器</title>
+  <link href="data:," rel="icon">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<main class="login-page">
-  <div class="container">
-    <h1>Unciv Srv</h1>
-    <form id="loginForm">
+<div class="login-container" id="app">
+  <div class="loading" id="loading">检测登录状态</div>
+  <div class="login-card" style="display: none;">
+    <h2>Unciv 服务器</h2>
+    <p class="subtitle">多人联机游戏管理平台</p>
+    <form id="form">
       <div class="form-group">
-        <label for="username">用户名:</label>
-        <input type="text" id="username" name="username" required />
+        <label for="username">用户名</label>
+        <input autocomplete="username" id="username" name="username" placeholder="请输入用户名" required type="text">
       </div>
       <div class="form-group">
-        <label for="password">密码:</label>
-        <input type="password" id="password" name="password" required />
+        <label for="password">密码</label>
+        <input autocomplete="current-password" id="password" name="password" placeholder="请输入密码" required
+               type="password">
       </div>
-      <button type="submit" id="loginBtn">登录</button>
+      <button class="btn btn-primary" type="submit">登录</button>
     </form>
-    <div id="result"></div>
-    <div class="info">
-      <p>使用游戏中的 ID 和密码登录</p>
-      <p>只能管理自己的存档</p>
-    </div>
   </div>
-</main>
+</div>
+<script src="common.js"></script>
 <script>
-  document.getElementById('loginForm').addEventListener('submit', async (e) => {
-    e.preventDefault()
-    const form = e.target
-    const formData = new FormData(form)
-    const submitBtn = document.getElementById('loginBtn')
-    const resultDiv = document.getElementById('result')
-    submitBtn.disabled = true
-    submitBtn.textContent = '登录中...'
-    form.classList.add('loading')
-    resultDiv.innerHTML = ''
+  document.addEventListener('DOMContentLoaded', async () => {
+    const loading = document.getElementById('loading')
+    const loginCard = document.querySelector('.login-card')
+    const form = document.getElementById('form')
+
     try {
-      const response = await fetch('/api/login', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({
-          username: formData.get('username'),
-          password: formData.get('password'),
-        }),
-      })
-      const result = await response.json()
-      if (response.ok) {
-        // 登录成功，根据用户类型跳转
-        if (result.isAdmin) {
-          window.location.href = '/admin/'
+      const session = await API.checkSession()
+
+      if (session.isLoggedIn) {
+        if (session.isAdmin) {
+          window.location.href = '/admin.html'
         } else {
-          window.location.href = '/user/'
+          window.location.href = '/user.html'
         }
-      } else if (result.type === 'error') {
-        resultDiv.innerHTML = `<div class="error">${result.message}</div>`
+      } else {
+        loading.style.display = 'none'
+        loginCard.style.display = 'block'
       }
     } catch (error) {
-      resultDiv.innerHTML = '<div class="error">网络错误，请重试</div>'
-    } finally {
-      submitBtn.disabled = false
-      submitBtn.textContent = '登录'
-      form.classList.remove('loading')
+      loading.style.display = 'none'
+      loginCard.style.display = 'block'
     }
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault()
+
+      const username = document.getElementById('username').value.trim()
+      const password = document.getElementById('password').value
+
+      if (!username || !password) {
+        UI.showToast('请输入用户名和密码', 'error')
+        return
+      }
+
+      const submitBtn = form.querySelector('button[type="submit"]')
+      submitBtn.disabled = true
+      submitBtn.textContent = '登录中...'
+
+      try {
+        const response = await API.login(username, password)
+
+        if (response.isAdmin) {
+          window.location.href = '/admin.html'
+        } else {
+          window.location.href = '/user.html'
+        }
+      } catch (error) {
+        UI.showToast(error.message || '登录失败', 'error')
+        submitBtn.disabled = false
+        submitBtn.textContent = '登录'
+      }
+    })
   })
 </script>
 </body>
